--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId> <!-- Nueva dependencia agregada para MongoDB -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
