--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=sistemaBibliotecario
-spring.data.mongodb.uri=mongodb+srv://gerlyuwu:vaquitas9@BibliotecaCluster.mongodb.net/Biblioteca?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://gerlyuwu:vaquitas9@bibliotecacluster.j02vmg5.mongodb.net/Biblioteca?retryWrites=true&w=majority&appName=BibliotecaCluster
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
